# permon_examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: common.cmake  load_cuda.cmake  load_permon.cmake  load_petsc.cmake  printsetting.cmake
test_01/: hello_permon.cpp  hello_permon.cu
test_02/: string.cpp  string.cu
test_03/: polytope.cpp  test.m
test_04/: ball.cpp  test.m
tex/test_03/: polytope.tex  polytope_n5.eps  polytope_n7.eps
tex/test_04/: ball.tex  ball_solution.eps
